--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "-": "^0.0.1",
     "@emailjs/browser": "^3.3.1",
+    "@googlemaps/react-wrapper": "^1.1.19",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "dom": "^0.0.3",
+    "google-maps-react": "^2.0.6",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
