--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "-": "^0.0.1",
     "@emailjs/browser": "^3.3.1",
     "@googlemaps/react-wrapper": "^1.1.19",
+    "@react-three/drei": "^8.6.1",
+    "@react-three/fiber": "^7.0.25",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "router": "^1.3.6",
+    "three": "^0.136.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
