--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "dom": "^0.0.3",
+    "fontloader": "^1.2.7",
     "google-maps-react": "^2.0.6",
     "history": "^5.2.0",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "react-three-fiber": "^6.0.13",
     "router": "^1.3.6",
     "three": "^0.136.0",
     "web-vitals": "^2.1.2"
